--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -10,7 +10,7 @@ Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Passer 
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Réassignez les tuiles utilisées\nAllez dans l'écran d'une cité > Cliquer la tuile utilisée (verte) pour la libérer > \nCliquer sur une tuile libre pour lui affecter de la population
 Meet another civilization!\nExplore the map until you encounter another civilization! = Rencontrez une autre civilisation !\nExplorez la carte jusqu'à rencontrer une autre civilisation !
 Open the options table!\nClick the menu button (top left) > click 'Options' = Ouvrez la table des options !\nCliquer sur le menu (en haut à gauche) > Cliquer sur 'Options'
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = Construisez une amélioration !\nConstruisez un Ouvrier > Déplacez le sur une tuile de plaine ou de prairie > \n Choisissez 'Bâtir une amélioration' > Choisissez la farme > \n Laissez l'ouvrir sur place jusqu'à ce qu'il ait terminé
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Construisez une amélioration !\nConstruisez un Ouvrier > Déplacez le sur une tuile de plaine ou de prairie > \n Choisissez 'Bâtir une amélioration' > Choisissez la farme > \n Laissez l'ouvrir sur place jusqu'à ce qu'il ait terminé
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Créez une route commerciale !\nConstruisez une route entre votre capitale et une autre cité\nOu, automatisez votre ouvrir et laissez le faire.
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Partez à la conquête d'une cité !\nRabaissez une cité ennemie jusqu'à un faible niveau de santé > \nEntrez dans la cité avec une unité de mélée
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Déplacez une unité aérienne !\nSéléctionnez une unité aérienne > Séléctionnez une autre cité à portée > \nDéplacez l'unité vers l'autre cité
@@ -108,7 +108,6 @@ Notre Dame = Notre-Dame
 'Architecture has recorded the great ideas of the human race. Not only every religious symbol, but every human thought has its page in that vast book.'  - Victor Hugo = 'L'architecture a inscrit les grandes idées de la race humaine. Non seulement chaque symbole religieux, mais chaque pensée humaine a sa page dans ce vaste livre.' - Victor Hugo
 
 Hagia Sophia = Sainte-Sophie
- # Requires translation!
 'For it soars to a height to match the sky, and as if surging up from among the other buildings it stands on high and looks down upon the remainder of the city, adorning it, because it is a part of it, but glorying in its own beauty'  - Procopius, De Aedificis = 'Car il s'élève en hauteur pour rencontrer le ciel, et comme s'il surgissait des autres bâtiments, il se dresse et regarde d'en haut le reste de la ville, l'ornant, car il en fait partie, mais se glorifiant dans sa propre beauté' - Procope de Césarée, De Aedificis
 +33% great person generation in all cities = + 33% de génération de Personnages illustres dans toutes les villes
 
@@ -365,9 +364,7 @@ Mercantile = Mercantile
 Militaristic = Militarisée
 Type:  = Type : 
 Influence:  = Influence:
- # Requires translation!
 Reach 30 for friendship. = Atteignez 30 pour être amis.
- # Requires translation!
 Reach highest influence above 60 for alliance. = Atteignez 60 (max) pour être alliés.
 Ally:  = Allié :
 
@@ -505,7 +502,6 @@ Game options = Options de jeu
 Map type = Type de carte
 Generated = Généré
 Existing = Existant
- # Requires translation!
 Map generation type = Type de carte générée
 Number of city-states = Nombre de cité-état
 One City Challenge = Défi ville unique
@@ -596,9 +592,7 @@ Map uploaded successfully! = Carte téléchargée avec succès !
 
 Options = Options
 Display options = Options d'affichage
- # Requires translation!
 Gameplay options = Options de jeu
- # Requires translation!
 Other options = Autres options
 Turns between autosaves = Tours avant sauvegarde automatique
 Sound effects volume = Volume sonore
@@ -791,7 +785,6 @@ Are you sure you want to sell this [building]? = Voulez-vous vraiment vendre [bu
 Great person points = Points de personnage illustre
 Current points = Points actuelles
 Points per turn = Points par tours
- # Requires translation!
 Convert production to gold at a rate of 4 to 1 = Convertie la production en or au taux de 4 pour 1
 Convert production to science at a rate of 4 to 1 = Convertie la production en science au taux de 4 pour 1
 The city will not produce anything. = La cité ne produira plus rien
@@ -1310,10 +1303,8 @@ Grand Mesa = Grand Mesa
 Great Barrier Reef = Grande Barrière de Corail
 Krakatoa = Krakatoa
 Mount Fuji = Mont Fuji
- # Requires translation!
 Old Faithful = Old Faithful
 Rock of Gibraltar = Rocher de Gibraltar
- # Requires translation!
 Cerro de Potosi = Cerro de Potosi
 El Dorado = El Dorado
 Fountain of Youth = Fontaine de Jouvence
