--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -10,7 +10,7 @@ Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Beende 
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Weise bearbeitete Felder neu zu!\nÖffne den Stadtbildschirm > klicke auf das zugewiesene (grüne) Feld, um es zu entfernen > \n klicke auf ein nicht zugewiesenes Feld, um die Bevölkerungszahl zuzuweisen.
 Meet another civilization!\nExplore the map until you encounter another civilization! = Triff eine andere Zivilisation!\n Erkunde die Karte, bis du einer anderen Zivilisation begegnest! 
 Open the options table!\nClick the menu button (top left) > click 'Options' = Öffne die Optionen!\nKlicke auf die Menütaste (oben links) > klicke auf 'Optionen'. 
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = Baue eine Verbesserung!\nBaue eine Arbeitereinheit > Bewege sie auf eine Ebene oder ein Grünland feld > \n Wähle 'Verbesserung bauen' > Wähle 'Farm' > \n Lasse den Arbeiter dort, bis er fertig ist.
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Baue eine Verbesserung!\nBaue eine Arbeitereinheit > Bewege sie auf eine Ebene oder ein Grünland feld > \n Wähle 'Verbesserung bauen' > Wähle 'Farm' > \n Lasse den Arbeiter dort, bis er fertig ist.
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Erstelle eine Handelsroute!\n Baue Straßen zwischen deiner Hauptstadt und einer anderen Stadt.\nOder automatisiere deinen Arbeiter und lasse sie schließlich dazu kommen.
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Erobere eine Stadt!\nBringe eine feindliche Stadt auf wenig leben > \nBetrete die Stadt mit einer Nahkampfeinheit.
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Bewege eine Lufteinheit!\nWähle eine Lufteinheit > Wähle eine andere Stadt in Reichweite > \nVerschiebe die Einheit zu der anderen Stadt.
@@ -182,7 +182,6 @@ Leaning Tower of Pisa = Schiefer Turm von Pisa
 'Don't clap too hard - it's a very old building.' - John Osbourne = 'Nicht zu hart klatschen - es ist ein sehr altes Gebäude.' - John Osbourne
 Free Great Person = Kostenlose große Persönlichkeit
 Choose a free great person = Wähle eine kostenlose große Persönlichkeit
- # Requires translation!
 Get  = Erhalten
 
 Himeji Castle = Schloss Himeji
@@ -196,7 +195,6 @@ Empire enters golden age = Es beginnt ein Goldenes Zeitalter
 
 Windmill = Windmühle
 Must not be on hill = Darf sich nicht auf einem Hügel befinden
- # Requires translation!
 Museum = Museum
 Hermitage = Einsiedelei
 
@@ -600,9 +598,7 @@ Map uploaded successfully! = Karte hochladen war erfolgreich!
 
 Options = Optionen
 Display options = Anzeigeeinstellungen
- # Requires translation!
 Gameplay options = Spielmechanikeinstellungen
- # Requires translation!
 Other options = Andere Einstellungen
 Turns between autosaves = Runden bis zum nächsten automatischen Speichern
 Sound effects volume = Lautstärke Soundeffekte
@@ -832,7 +828,6 @@ vs [unitType] = gegen [unitType]
 Terrain = Gelände
 
 
- # Requires translation!
 Hurry Research = Forschung beschleunigen
 Conduct Trade Mission = Handelsmission durchführen
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = Deine Handelsmission zu [civName] hat dir [goldAmount] Gold und [influenceAmount] Einfluss eingebracht!
@@ -1317,25 +1312,15 @@ Impassible = Unpassierbar
 
 # Natural Wonders
 
- # Requires translation!
 Barringer Crater = Barringer-Krater
- # Requires translation!
 Grand Mesa = Grand Mesa
- # Requires translation!
 Great Barrier Reef = Great Barrier Reef
- # Requires translation!
 Krakatoa = Krakatau
- # Requires translation!
 Mount Fuji = Fuji
- # Requires translation!
 Old Faithful = Old Faithful
- # Requires translation!
 Rock of Gibraltar = Felsen von Gibraltar
- # Requires translation!
 Cerro de Potosi = Cerro de Potosí
- # Requires translation!
 El Dorado = El Dorado
- # Requires translation!
 Fountain of Youth = Jungbrunnen
 
 # Resources
@@ -1538,7 +1523,6 @@ Unbuildable = nicht baubar
 Can start an 8-turn golden age = Kann ein Goldenes Zeitalter über 8 Runden starten
 Can build improvement: Landmark = Kann Verbesserung errichten: Sehenswürdigkeit
 Great Scientist = Große(r) Wissenschaftler(in)
- # Requires translation!
 Can hurry technology research = Kann Erforschung von Technologien beschleunigen
 Can build improvement: Academy = Kann Verbesserung errichten: Akademie
 Great Merchant = Große(r) Händler(in)
@@ -1639,7 +1623,6 @@ Ambush I = Lufthinterhalt I
 Ambush II = Lufthinterhalt II
 Haka War Dance = Haka Kriegstanz
 -10% combat strength for adjacent enemy units = -10% Kampfstärke für angrenzende feindliche Einheiten
- # Requires translation!
 Rejuvenation = Verjüngung
  # Requires translation!
 All healing effects doubled = 
