--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -10,7 +10,7 @@ Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Zakońc
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Zmień pracujące pola!\nPrzejdź do panelu Miasta > wskaż przypisane (zielone) pole by odznaczyć > \n wskaż pole by przydzielić cywili
 Meet another civilization!\nExplore the map until you encounter another civilization! = Spotkaj inną cywilizację!\nEksploruj świat do momentu napotkania nowej cywilizacji!
 Open the options table!\nClick the menu button (top left) > click 'Options' = Otwórz menu opcji!\nWciśnij przycisk menu (lewy górny róg) > Wciśnij przycisk 'Opcje'
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = Zbuduj ulepszenie!>n\ 
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Zbuduj ulepszenie!>n\ 
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Utwórz szlak handlowy!\nWybuduj drogi pomiędzy stolicą a innymi drogami\n0r, Zautomatyzuj swoich robotników i pozwól robić je na własną ręke //preview in game needed
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit =  Podbij miasto!\nDoprowadź wrogie miasto do stanu niskiego zdrowia > \nWejdź do miasta jednostką blisko dystansową
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Przemieść jednostkę powietrzną!n\nWybierz jednostke powietrzną > wybierz inne miasto w zasięgu > \nPrzemieść jednostkę do innego miasta
@@ -778,7 +778,6 @@ Stopped expansion = Zatrzymana ekspansja
 Food converts to production = Przetwarzanie żywności na produkcje
 [turnsToStarvation] turns to lose population =  Ilość tur do utraty populacji: [turnsToStarvation]
 Stopped population growth = Zatrzymane rośnięcie populacji
- # Requires translation!
 In resistance for another [numberOfTurns] turns = W oporze przez następne tur: [numerOfTurns]
 Sell for [sellAmount] gold = Sprzedaj za [sellAmount] złota
 Are you sure you want to sell this [building]? = Aby czy na pewno chcesz sprzedać [buildings]?
@@ -827,7 +826,6 @@ Hurry Research = Szybkie Badanie
 Conduct Trade Mission = Prowadzenie Misji Handlowej
 Your trade mission to [civName] has earned you [goldAmount] gold and [influenceAmount] influence! = Twoja misja handlowa do [civName] zdobyła dla ciebie [goldAmount] złota oraz [influenceAmount] wpływów
 Hurry Wonder = Szybkie Cuda
-
 Your citizens have been happy with your rule for so long that the empire enters a Golden Age! = Twoi obywatele są zadowoleni pod twoim panowaniem tak długo że imperium wkracza w Złotą Era
 You have entered the [newEra]! = Wkroczyłeś do 
 [policyBranch] policy branch unlocked! = Odblokowano gałąź ustroju społecznego [policyBranch] 
@@ -841,7 +839,6 @@ Buildings = Budynki
 Wonders = Cuda
 Base values = Bazowe wartości
 Bonuses = Bonusy
-
 Final = Finalny
 Other = Inne
 Population = Populacja
@@ -858,6 +855,7 @@ Closest city = Najbliższe miasto
 Action = Akcja
 Defeated = Pokonany
 Tiles = Pola
+ # Requires translation!
 Natural Wonders = 
 
 #Victory
@@ -902,7 +900,6 @@ Razing the city annexes it, and starts razing the city to the ground. = Zrównuj
 The population will gradually dwindle until the city is destroyed. = Populacja będzie się stopniowo zmniejszać, aż do zniszczenia miasta.
 Destroy = Zniszcz
 Destroying the city instantly razes the city to the ground. = Zniszczenie miasta natychmiastowo zrównuje miasto z ziemią
-
 Remove your troops in our border immediately! = Natychmiast usuńcie swoje oddziały na naszej granicy!
 Sorry. = Przepraszam.
 Never! = Nigdy!
