--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -11,7 +11,7 @@ Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to u
 Meet another civilization!\nExplore the map until you encounter another civilization! = Potkej jinou civilizaci!\nProzkoumávej mapu dokud nenarazíš na jinou civilizaci!
 Open the options table!\nClick the menu button (top left) > click 'Options' = Otevři nastavení!\nKlikni na tlačítko menu (vlevo nahoře) > klikni na 'Nastavení'
  # Requires translation!
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = 
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = 
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Vytvoř obchodní cestu!\nPostav cestu mezi tvým hlavním městem a některým dalším\nNebo zapni automatizaci dělníka a počkej až ji vytvoří sám
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Dobij město!\nDostaň zdraví město na nízkou úroveň > \nVstup do města s jednotkou pro boj nablízko
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Přesuň vzdušnou jednotkou!\nVyber vzdušnou jednotku > vyber jiné měso v dosahu > \nPřesuň jednotku do onoho města
