--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -10,7 +10,7 @@ Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Termina
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Reassegna delle celle sfruttate\nEntra nella schermata cittadina > Clicca su una casella sfruttata (verde) per liberarla > \n Clicca su una casella non sfruttata per assegnarle un abitante
 Meet another civilization!\nExplore the map until you encounter another civilization! = Incontra un'altra civiltà!\nEsplora la mappa finché non incontri un'altra civiltà.
 Open the options table!\nClick the menu button (top left) > click 'Options' = Apri il menu delle opzioni!\nClicca sul tasto menu (in altro a sinistra) > Clicca su 'Opzioni'.
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = Costruisci un miglioramento!\nCostruisci un Lavoratore > Spostalo su una Pianura o su una Prateria > \n Scegli 'Costruisci miglioramento' > Scegli 'Fattoria' > \n Lascia lì il Lavoratore finché non ha finito.
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = Costruisci un miglioramento!\nCostruisci un Lavoratore > Spostalo su una Pianura o su una Prateria > \n Scegli 'Costruisci miglioramento' > Scegli 'Fattoria' > \n Lascia lì il Lavoratore finché non ha finito.
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Crea una rotta commerciale!\nCostruisci una strada tra la tua capitale e un'altra città.\nProva ad automatizzare un Lavoratore perché lo faccia.
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Conquista una città!\nPorta a zero la salute di una Città appartenente al nemico > \nEntra nella Città con un'unità da mischia.
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Sposta un'unità aerea!\nSeleziona un'unità aerea > Seleziona un'altra Città nel suo raggio > \nSposta l'unità in quell'altra Città.
@@ -484,7 +484,6 @@ Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked un
 
 Spain = Spagna
 Isabella = Isabella
- # Requires translation!
 100 Gold for discovering a Natural Wonder (bonus enhanced to 500 Gold if first to discover it). Culture, Happiness and tile yields from Natural Wonders doubled. = Otteni Oro bonus (raddoppiato se la scopri per prima) quando scopri una Meraviglia Naturale, che donano il doppio di Cultura, Felicità e rese di casella.
 
 # New game screen
