--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -20,7 +20,7 @@ Meet another civilization!\nExplore the map until you encounter another civiliza
  # Requires translation!
 Open the options table!\nClick the menu button (top left) > click 'Options' = 
  # Requires translation!
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = 
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = 
  # Requires translation!
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = 
  # Requires translation!
