--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -11,7 +11,7 @@ Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to u
 Meet another civilization!\nExplore the map until you encounter another civilization! = Зустріньте іншу цивілізацію!\nДосліджуйте мапу для зустрічі з іншої цивілізацією!
 Open the options table!\nClick the menu button (top left) > click 'Options' = Відкрийте вкладку з налаштуваннями\nНатисніть на кнопку меню (зверху ліворуч) > Натисність на «Налаштування»
  # Requires translation!
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = 
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Click 'Create improvement' (above the unit table, bottom left)\n > Choose the farm > \n Leave the worker there until it's finished = 
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Створіть торговий шлях!\nБудуйте дороги між вашою столицею та іншим містом\nАбо автоматизуйте свого робітника і дозвольте йому зробити це автоматично 
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Захопіть місто!\n Зробіть так, щоб у міста майже лишалось здоров’я > \nУвійдіть до міста з ближньобійником
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Перемістіть повітряний підрозділ!\nВиберіть його !\n виберіть інше місто в радіусі дії > \nПеремість підрозділ в інше місто
