Added Promotion information to Civilopedia

--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -953,6 +953,11 @@ Unhappiness =
 Victory Types = 
 Workers = 
 
+# Other civilopedia things
+Nations = 
+Promotions = 
+Available for [unitTypes] = 
+
 # Policies
 
 Adopt policy = 
