--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -10,11 +10,11 @@ Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Zakońc
 Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Zmień pracujące pola!\nPrzejdź do panelu Miasta > wskaż przypisane (zielone) pole by odznaczyć > \n wskaż pole by przydzielić cywili
 Meet another civilization!\nExplore the map until you encounter another civilization! = Spotkaj inną cywilizację!\nEksploruj świat do momentu napotkania nowej cywilizacji!
 Open the options table!\nClick the menu button (top left) > click 'Options' = Otwórz menu opcji!\nWciśnij przycisk menu (lewy górny róg) > Wciśnij przycisk 'Opcje'
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = Zbuduj ulepszenie!>n\ 
-Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Utwórz szlak handlowy!\nWybuduj drogi pomiędzy stolicą a innymi drogami\n0r, Zautomatyzuj swoich robotników i pozwól robić je na własną ręke //preview in game needed
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = Zbuduj ulepszenie!>n\Stwórz Robotnika > Przemieść go na pole Równin lub Łąkę >\n Wybierz 'Zbuduj ulepszenie' >Wybierz Farmę > \n Zostaw tam robotnika, dopóki nie skończy
+Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Utwórz szlak handlowy!\nWybuduj drogi pomiędzy stolicą a innymi drogami\n0r, Zautomatyzuj swoich robotników i pozwól im robić je na własną ręke
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit =  Podbij miasto!\nDoprowadź wrogie miasto do stanu niskiego zdrowia > \nWejdź do miasta jednostką blisko dystansową
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Przemieść jednostkę powietrzną!n\nWybierz jednostke powietrzną > wybierz inne miasto w zasięgu > \nPrzemieść jednostkę do innego miasta
-See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' =   Zobacz rozkład statystyk!\nWejdź w ekran przeglądowy (górny prawy róg) >\nKliknij na 'Statystyki'
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' =   Zobacz rozkład statystyk!\nWejdź w 'Przegląd' (górny prawy róg) >\nKliknij na 'Statystyki'
 
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = O nie! Wygląda na to że coś przegapiłem! To absolutnie nie powinno się wydarzyć! Wyślij mi proszę (yairm210@hotmail.com) maila z informacją o grze (menu -> zapisz grę -> skopiuj informacje o grze -> wklej do maila) a ja postaram się to naprawić. Dziękuję za pomoc.
 
@@ -295,7 +295,7 @@ Peace = Pokój
 Declare war = Wypowiedz wojnę
 Declare war on [civName]? = Wypowiedz wojnę cywilizacji [civName]
 [civName] has declared war on us! = Władca cywilizacji [civName] wypowiedział nam wojnę!
-[leaderName] of [nation] = [leaderName], [nation] //'władca cywilizacji' unneeded
+[leaderName] of [nation] = [leaderName], [nation]
 You'll pay for this! = Zapłacisz za swą zuchwałość!
 Negotiate Peace = Negocjuj pokój
 Very well. = Niech tak będzie.
@@ -314,7 +314,7 @@ Denounce ([numberOfTurns] turns) = Potęp cywilizację na [numberOfTurns] tur
 We will remember this. = Zapamiętamy to sobie!
 
 Unforgivable = Niewybaczlne
-Enemy = Wróg //'wrogowie' plural
+Enemy = Wróg 
 Competitor = Konkurenci
 Neutral = Neutralny
 Favorable = Ulubieniec
@@ -543,7 +543,7 @@ Game Speed = Prędkość gry
 Quick = Szybka
 Standard = Standardowa
 Epic = Długa
-Marathon = Bardzo długa //Marathon isn't instant i qess
+Marathon = Bardzo długa 
 
 Starting Era = Początkowa era
 It looks like we can't make a map with the parameters you requested! = Wygląda na to że nie jesteśmy w stanie stworzyć mapy z podanymi przez Ciebie parametrami!
@@ -883,7 +883,7 @@ What would you like to do with the city? = Co chciałbyś zrobić z miastem?
 Annex = Przejmij
 Annexed cities become part of your regular empire. = Przejęte miasto staje się częścią twojego imperium.
 Their citizens generate 2x the unhappiness, unless you build a courthouse. = Obywatele miasta generują podwójn 2 razy więcej niezadowolenia, chyba że zbudujesz sąd.
-Puppet = Przygarnij //I think this word reflects the meaning.
+Puppet = Przygarnij 
 Puppeted cities do not increase your tech or policy cost, but their citizens generate 1.5x the regular unhappiness. = Przygarnięte miasta nie zwiększają kosztów technologi i ustrojów społecznych, ale ich mieszkańcy generują 1,5 raza więcej niezadowolenia niż zwykle.
 You have no control over the the production of puppeted cities. = Nie masz kontroli nad produkcją przygarniętych miast.
 Puppeted cities also generate 25% less Gold and Science. = Przygarnięte miasta również generują 25% mniej Złota i Nauki.
