Add crash reporting controller and email sending on android

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -18,6 +18,8 @@ Move an air unit!\nSelect an air unit > select another city withing range > \nMo
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Zobraz statistiku!\nVstup do Přehledové obrazovky (pravý horní roh) >\nKlikni na 'Statistika'
 
 Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send me (yairm210@hotmail.com) an email with the game information (menu -> save game -> copy game info -> paste into email) and I'll try to fix it as fast as I can! = Hrom do čepice! Vypadá to, že se něco HÓÓÓDNĚ pokaziloTohle by se v ŽÁDNÉM PŘÍPADĚ nemělo stávat! Prosím pošlete mi (yairm210@hotmail.com) email s informacemi o hře (menu -> uložit hru -> kopírovat herní info -> vložit do emailu) a já se to pokusím opravit jak nejrychleji budu umět!
+ # Requires translation!
+Oh no! It looks like something went DISASTROUSLY wrong! This is ABSOLUTELY not supposed to happen! Please send us an report and we'll try to fix it as fast as we can! =
 
 # Buildings
 
