Added missing translations

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -978,6 +978,13 @@ Victory Types =
  # Requires translation!
 Workers = 
 
+# Other civilopedia things
+ # Requires translation!
+Nations = 
+Promotions = Povýšení
+ # Requires translation!
+Available for [unitTypes] = 
+
 # Policies
 
 Adopt policy = Přijmout sociální politiku
