--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -1596,6 +1596,14 @@ Victory Types =
  # Requires translation!
 Workers = 
 
+# Other civilopedia things
+ # Requires translation!
+Nations = 
+ # Requires translation!
+Promotions = 
+ # Requires translation!
+Available for [unitTypes] = 
+
 # Policies
 
  # Requires translation!
