--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -977,6 +977,13 @@ Victory Types =
  # Requires translation!
 Workers = 
 
+# Other civilopedia things
+ # Requires translation!
+Nations = 
+Promotions = Promotions
+ # Requires translation!
+Available for [unitTypes] = 
+
 # Policies
 
 Adopt policy = Adopter la Doctrine
