--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -983,6 +983,13 @@ Victory Types =
  # Requires translation!
 Workers = 
 
+# Other civilopedia things
+ # Requires translation!
+Nations = 
+Promotions = Beförderungen
+ # Requires translation!
+Available for [unitTypes] = 
+
 # Policies
 
 Adopt policy = Grundsatz verabschieden
