--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -973,6 +973,13 @@ Victory Types =
  # Requires translation!
 Workers = 
 
+# Other civilopedia things
+ # Requires translation!
+Nations = 
+Promotions = Promozioni
+ # Requires translation!
+Available for [unitTypes] = 
+
 # Policies
 
 Adopt policy = Adotta politica
