--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -1002,6 +1002,13 @@ Victory Types =
  # Requires translation!
 Workers = 
 
+# Other civilopedia things
+ # Requires translation!
+Nations = 
+Promotions = 승급
+ # Requires translation!
+Available for [unitTypes] = 
+
 # Policies
 
 Adopt policy = 정책 채택
