--- a/android/assets/jsons/translationsByLanguage/Malay.properties
+++ b/android/assets/jsons/translationsByLanguage/Malay.properties
@@ -1640,6 +1640,14 @@ Victory Types =
  # Requires translation!
 Workers = 
 
+# Other civilopedia things
+ # Requires translation!
+Nations = 
+ # Requires translation!
+Promotions = 
+ # Requires translation!
+Available for [unitTypes] = 
+
 # Policies
 
  # Requires translation!
