--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -1426,6 +1426,13 @@ Victory Types =
  # Requires translation!
 Workers = 
 
+# Other civilopedia things
+ # Requires translation!
+Nations = 
+Promotions = Promoţii
+ # Requires translation!
+Available for [unitTypes] = 
+
 # Policies
 
 Adopt policy = Adoptă politică
