--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -981,6 +981,13 @@ Victory Types =
  # Requires translation!
 Workers = 
 
+# Other civilopedia things
+ # Requires translation!
+Nations = 
+Promotions = Повышения
+ # Requires translation!
+Available for [unitTypes] = 
+
 # Policies
 
 Adopt policy = Принять общественный институт
