--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -979,6 +979,13 @@ Victory Types =
  # Requires translation!
 Workers = 
 
+# Other civilopedia things
+ # Requires translation!
+Nations = 
+Promotions = 晋升
+ # Requires translation!
+Available for [unitTypes] = 
+
 # Policies
 
 Adopt policy = 推行政策
