--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -984,6 +984,13 @@ Victory Types =
  # Requires translation!
 Workers = 
 
+# Other civilopedia things
+ # Requires translation!
+Nations = 
+Promotions = Ascensos
+ # Requires translation!
+Available for [unitTypes] = 
+
 # Policies
 
 Adopt policy = Adoptar política
