--- a/android/assets/jsons/translationsByLanguage/Ukrainian.properties
+++ b/android/assets/jsons/translationsByLanguage/Ukrainian.properties
@@ -1041,6 +1041,13 @@ Victory Types =
  # Requires translation!
 Workers = 
 
+# Other civilopedia things
+ # Requires translation!
+Nations = 
+Promotions = Акції
+ # Requires translation!
+Available for [unitTypes] = 
+
 # Policies
 
 Adopt policy = Прийняти політику
