--- a/android/assets/jsons/translationsByLanguage/English.properties
+++ b/android/assets/jsons/translationsByLanguage/English.properties
@@ -1751,6 +1751,14 @@ Victory Types =
  # Requires translation!
 Workers = 
 
+# Other civilopedia things
+ # Requires translation!
+Nations = 
+ # Requires translation!
+Promotions = 
+ # Requires translation!
+Available for [unitTypes] = 
+
 # Policies
 
  # Requires translation!
