--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -1176,6 +1176,13 @@ Victory Types =
  # Requires translation!
 Workers = 
 
+# Other civilopedia things
+ # Requires translation!
+Nations = 
+Promotions = Promoções
+ # Requires translation!
+Available for [unitTypes] = 
+
 # Policies
 
 Adopt policy = Adotar Política
