Fix Greece Unique wasn't effective + Added CityState relation notifications
* Greece influence to CityState benefits from unique
* Added notifications when you are about to lose (or lost) friendship and alliance with a city state. Closes #1168
* Introduced restingPoint in DiplomacyManager to support constant shifts in influence

--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -679,6 +679,8 @@ We have allied with [nation]. =
 We have lost alliance with [nation]. = 
 We have discovered [naturalWonder]! = 
 We have received [goldAmount] Gold for discovering [naturalWonder] = 
+Your relationship with [cityStateName] is about to degrade = 
+Your relationship with [cityStateName] degraded = 
 
 # World Screen UI
 
