Autogeneration translation files

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -686,6 +686,10 @@ We have lost alliance with [nation]. = Ztratili jsme alianci s civilizací [nati
 We have discovered [naturalWonder]! = 
  # Requires translation!
 We have received [goldAmount] Gold for discovering [naturalWonder] = 
+ # Requires translation!
+Your relationship with [cityStateName] is about to degrade = 
+ # Requires translation!
+Your relationship with [cityStateName] degraded = 
 
 # World Screen UI
 
