--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -680,6 +680,10 @@ We have allied with [nation]. = Jesteśmy sojusznikami z [nation].
 We have lost alliance with [nation]. = Nie jesteśmy już w sojuszu z [nation].
 We have discovered [naturalWonder]! = Odkryliśmy [naturlWonder]!
 We have received [goldAmount] Gold for discovering [naturalWonder] = Otrzymaliśmy [goldAmount] Złota za odkrycie [naturalWonder]
+ # Requires translation!
+Your relationship with [cityStateName] is about to degrade = 
+ # Requires translation!
+Your relationship with [cityStateName] degraded = 
 
 # World Screen UI
 
