--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -691,6 +691,10 @@ We have lost alliance with [nation]. = Wir haben die Alianz mit [nation] verlore
 We have discovered [naturalWonder]! = 
  # Requires translation!
 We have received [goldAmount] Gold for discovering [naturalWonder] = 
+ # Requires translation!
+Your relationship with [cityStateName] is about to degrade = 
+ # Requires translation!
+Your relationship with [cityStateName] degraded = 
 
 # World Screen UI
 
