--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -681,6 +681,10 @@ We have lost alliance with [nation]. = Non siamo più alleati di [nation].
 We have discovered [naturalWonder]! = 
  # Requires translation!
 We have received [goldAmount] Gold for discovering [naturalWonder] = 
+ # Requires translation!
+Your relationship with [cityStateName] is about to degrade = 
+ # Requires translation!
+Your relationship with [cityStateName] degraded = 
 
 # World Screen UI
 
