--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -804,6 +804,10 @@ We have lost alliance with [nation]. =
 We have discovered [naturalWonder]! = 
  # Requires translation!
 We have received [goldAmount] Gold for discovering [naturalWonder] = 
+ # Requires translation!
+Your relationship with [cityStateName] is about to degrade = 
+ # Requires translation!
+Your relationship with [cityStateName] degraded = 
 
 # World Screen UI
 
