--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -689,6 +689,10 @@ We have lost alliance with [nation]. = Наш альянс с [nation] был р
 We have discovered [naturalWonder]! = 
  # Requires translation!
 We have received [goldAmount] Gold for discovering [naturalWonder] = 
+ # Requires translation!
+Your relationship with [cityStateName] is about to degrade = 
+ # Requires translation!
+Your relationship with [cityStateName] degraded = 
 
 # World Screen UI
 
